compiler/src/snapshots/arachne_compiler__compiler__tests__function__compile_function_with_let.snap
---
source: compiler/src/compiler.rs
expression: "compile([[\"fn\".into(), [\"x\".into()].into(),\n                            [\"let\".into(), \"y\".into(), \"x\".into()].into(),\n                            \"y\".into()].into()]).await"
---
jump 7
peek 0
peek 0
return
close 2 1 0
dump
drop
