compiler/src/snapshots/arachne_compiler__compiler__tests__function__compile_function_with_two_arguments.snap
---
source: compiler/src/compiler.rs
expression: "compile([[\"fn\".into(), [\"x\".into(), \"y\".into()].into(),\n                            42.0.into()].into()]).await"
---
[
    Jump {
        pointer: 14,
    },
    Float64(
        42.0,
    ),
    Return {
        frame_size: 2,
    },
    Close {
        pointer: 3,
        arity: 2,
        environment_size: 0,
        environment: [],
    },
    Dump,
    Drop,
]
