compiler/src/snapshots/arachne_compiler__compiler__tests__function__compile_function_with_two_let.snap
---
source: compiler/src/compiler.rs
expression: "compile([[\"fn\".into(), [\"x\".into()].into(),\n                            [\"let\".into(), \"y\".into(), \"x\".into()].into(),\n                            [\"let\".into(), \"z\".into(), \"y\".into()].into(),\n                            \"z\".into()].into()]).await"
---
jump 9
peek 0
peek 0
peek 0
return
close 2 1 0
dump
drop
