compiler/src/snapshots/arachne_compiler__compiler__tests__function__compile_function_with_zero_argument.snap
---
source: compiler/src/compiler.rs
expression: "compile([[\"fn\".into(), [].into(), 42.0.into()].into()]).await"
---
jump a
float64 42
return
close 3 0 0 []
dump
drop
