compiler/src/snapshots/arachne_compiler__compiler__tests__function__compile_let.snap
---
source: compiler/src/compiler.rs
expression: "compile([[\"fn\".into(), [\"x\".into()].into(), 42.0.into()].into()]).await"
---
[
    Jump,
    Drop,
    Nil,
    Nil,
    Nil,
    Float64(
        42.0,
    ),
    Return {
        frame_size: 1,
    },
    Close {
        pointer: 5,
        arity: 1,
        environment_size: 0,
        environment: [],
    },
    Dump,
    Drop,
]
